<resources>
    <string name="app_name">FalconEvCharger</string>
    <string name="falcon_ev_charger">Falcon EV Charger</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign up</string>
    <string name="sign_in_with_phone_number">Sign in with Phone Number</string>
    <string name="enter_email_or_phone_number">Enter phone number</string>
    <string name="please_enter_your_phone_number_msg">Please enter your phone number. You will receive an OTP code in the next step for the verification process.</string>
    <string name="txt_continue">Continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="don_t_worry_sign_up_message">Don\'t worry, only you can see your personal data. No one else will be able to see it.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="login">Login</string>
    <string name="dashboard">Dashboard</string>
    <string name="setup">Setup</string>
    <string name="user_id">User ID</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="accept_the_terms_first">Kindly accept the terns first</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_email">Didn\'t receive OTP?</string>
    <string name="resend_otp"><a href="https://example.com">Resend OTP</a></string>
    <string name="we_have_sent_an_otp_code_to_email">We have sent an OTP code to email %s. Enter the OTP code below to continue.</string>
    <string name="otp_code_verification">OTP code verification 🔐</string>
    <string name="remaining_time">You can resend code in %1\$d s</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_otp">Please enter Otp</string>
    <string name="start_scanner">Start scanner</string>
    <string name="device_id">Device id: %s</string>
    <string name="charges_per_unit">Unit Rate Rs: %s kWh</string>
    <string name="add_money"><u>Add Money</u></string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="select_statement">Select Statement</string>
    <string name="max_power">Max.power</string>
    <string name="start_charging">Start charging</string>
    <string name="internet_issue">internet is not available please try again</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="select_unit">Select Unit</string>
    <string name="falcon_success_message">Charging started successfully</string>
    <string name="falcon_success_sub_header">for %1$s, no. <b>%2$s</b>\n on device id %3$s</string>

    <string name="falcon_success_ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stop_charging">Stop Charging</string>
    <string name="you">You</string>
    <string name="menu">Title</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="rs_amount"> - %s</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="select_amount">Select Amount</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_language">Change Language</string>
    <string name="my_vehicles">My Vehicles</string>
    <string name="my_account">My Account</string>
    <string name="about_zaap">About zaap</string>
    <string name="get_statement"><u>Get Statement</u></string>
</resources>