<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.falcon.evCharger..getDevice.SuccessFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.falcon.evCharger.getDevice.viewModel.SuccessViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:src="@drawable/ic_success"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_header"
            style="@style/text_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/falcon_success_message"
            android:textColor="@color/green_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <TextView
            android:id="@+id/tv_sub_header"
            style="@style/text_style_16_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:text="@string/falcon_success_sub_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_header" />

        <Button
            android:id="@+id/btn_start_scanner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="80dp"
            android:layout_marginBottom="76dp"
            android:background="@drawable/button_background_container"
            android:onClick="@{viewModel::okOkClick}"
            android:text="@string/falcon_success_ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorLink="@color/green_900"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tv_stop_charging"
            style="@style/text_style_14_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:onClick="@{viewModel::onStopChargingClick}"
            android:padding="5dp"
            android:text="@string/stop_charging"
            android:textColor="@color/red_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_scanner" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>