<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.falcon.evCharger.login.viewModel.GetDeviceFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_show_balance"
            style="@style/text_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:text="$00.00"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_device_id"
            style="@style/text_style_16_bold"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:text="@string/device_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_show_balance" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/cons_layout_vehicle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:minHeight="50dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{viewModel::onVehicleClicked}"
            android:background="@drawable/spinner_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_device_id">


            <RelativeLayout
                android:id="@id/rl_layout_vehicle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_vehicle_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_select_vehicle"
                    style="@style/text_style_14_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/select_vehicle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_vehicle_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/iv_vehicle_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginHorizontal="10dp"
                android:layout_toEndOf="@+id/rl_layout_vehicle"
                android:src="@drawable/arrow_down"
                android:tint="@color/green_900"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseAppTint" />

        </androidx.constraintlayout.widget.ConstraintLayout>




        <Button
            android:id="@+id/btn_start_scanner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="40dp"
            android:background="@drawable/button_background_container"
            android:onClick="@{viewModel::onLoginClick}"
            android:text="@string/start_scanner"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorLink="@color/green_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cons_layout_vehicle"/>




        <Button
            android:id="@+id/btn_recharge_now"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="40dp"
            android:background="@drawable/button_background_container"
            android:onClick="@{viewModel::onLoginClick}"
            android:text="@string/recharge_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorLink="@color/green_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_scanner"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>